[package]
name = "mussel"
description = "Mussel: an interpreted programming language written in Rust"
version = "0.1.0"
authors = ["Francesco Giannice <giannice.developer@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "Apache-2.0"

[profile.release]
lto = true
strip = true

[dependencies]
nom = "7.1"
nom-supreme = "0.8"
nom_locate = "4.0"
argh = "0.1"
color-eyre = "0.6"
codespan-reporting = "0.12.0"
rand = "0.8"